--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>wildfly-15</module>
         <module>wildfly-16</module>
         <module>wildfly-17</module>
+        <module>wildfly-18</module>
         <module>update-checker</module>
     </modules>
 
@@ -37,14 +38,16 @@
         <!-- Used only with JDK 1.8 -->
         <java.version>1.8</java.version>
 
-        <!-- Java EE modules that were removed from Java SE after Java 8 -->
+        <!-- Java/Jakarta EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
+        <!-- For the Jakarta EE successors to the Java EE modules the version of Jakarta EE8/Wildfly 18 is given -->
         <!-- The versions here are the latest individual version, some servers override them, -->
         <!-- in some cases with different artifacts (that's why group/artifact are variable) -->
         <javax.jaxb.version>2.3.1</javax.jaxb.version>
         <javax.jws.version>1.0-MR1</javax.jws.version>
         <javax.soap-api.version>1.4.0</javax.soap-api.version>
         <javax.activation.version>1.1.1</javax.activation.version>
+        <jakarta.activation.version>1.2.1</jakarta.activation.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <javax.transaction-api.version>1.3</javax.transaction-api.version>
         <javax.xml.bind.groupId>javax.xml.bind</javax.xml.bind.groupId>
@@ -80,8 +83,8 @@
         <docker.plugin.version>0.31.0</docker.plugin.version>
         <jacoco.plugin.version>0.8.4</jacoco.plugin.version>
         <nexus-staging.plugin.version>1.6.8</nexus-staging.plugin.version>
-        <openapi-generator.plugin.version>4.1.0</openapi-generator.plugin.version>
-        <swagger-codegen.plugin.version>3.0.10</swagger-codegen.plugin.version>
+        <openapi-generator.plugin.version>4.1.3</openapi-generator.plugin.version>
+        <swagger-codegen.plugin.version>3.0.11</swagger-codegen.plugin.version>
         <versions.plugin.version>2.7</versions.plugin.version>
         <wildfly.plugin.version>2.0.1.Final</wildfly.plugin.version>
 
@@ -110,12 +113,13 @@
         <!-- artifact versions -->
         <apache.commons.lang3.version>3.9</apache.commons.lang3.version>
         <logback.version>1.2.3</logback.version>
-        <lombok.version>1.18.8</lombok.version>
+        <lombok.version>1.18.10</lombok.version>
+        <mapstruct.version>1.3.1.Final</mapstruct.version>
         <slf4j.version>1.7.28</slf4j.version>
 
         <!-- latest Jackson version for projects independent of an application server (AS) -->
         <!-- most of the AS submodules redefine it with an older version -->
-        <jackson-2-version>2.9.9</jackson-2-version>
+        <jackson-2-version>2.10.0</jackson-2-version>
 
         <!-- Java Expression Language (JSR 341) generally defined; the application servers -->
         <!-- have slightly different version strings (3.0.1-b08-jbossorg-1 and 3.0.1.b08-redhat-1), -->
@@ -123,15 +127,16 @@
         <javax.el.version>3.0.1-b11</javax.el.version>
 
         <!-- testing and static analysis -->
-        <junit.platform.version>1.5.1</junit.platform.version>
-        <junit.jupiter.version>5.5.1</junit.jupiter.version>
-        <hamcrest.version>2.1</hamcrest.version>
-        <mockito.version>3.0.0</mockito.version>
-        <byte-buddy.version>1.10.1</byte-buddy.version>
-        <equalsverifier.version>3.1.9</equalsverifier.version>
-        <json.unit.version>2.8.0</json.unit.version>
-        <restassured.version>4.0.0</restassured.version>
-        <wiremock.version>2.24.1</wiremock.version>
+        <opentest4j.version>1.2.0</opentest4j.version>
+        <junit.platform.version>1.5.2</junit.platform.version>
+        <junit.jupiter.version>5.5.2</junit.jupiter.version>
+        <hamcrest.version>2.2</hamcrest.version>
+        <mockito.version>3.1.0</mockito.version>
+        <byte-buddy.version>1.10.2</byte-buddy.version>
+        <equalsverifier.version>3.1.10</equalsverifier.version>
+        <json.unit.version>2.10.0</json.unit.version>
+        <restassured.version>4.1.2</restassured.version>
+        <wiremock.version>2.25.1</wiremock.version>
     </properties>
 
     <!-- no dependencies in this POM, as dependencies from a parent POM can't be excluded -->
@@ -174,6 +179,11 @@
                 <groupId>javax.activation</groupId>
                 <artifactId>activation</artifactId>
                 <version>${javax.activation.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.activation</groupId>
+                <artifactId>jakarta.activation</artifactId>
+                <version>${jakarta.activation.version}</version>
             </dependency>
 
             <!-- utils -->
