--- a/wildfly-18/pom.xml
+++ b/wildfly-18/pom.xml
@@ -7,77 +7,71 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>wildfly-17</artifactId>
+    <artifactId>wildfly-18</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.groupId}.${project.artifactId}</name>
 
     <properties>
-        <!-- latest EE8 spec -->
-        <javax.javaee-api.version>8.0</javax.javaee-api.version>
-
-        <!-- EE8 spec with JBoss additions, from the Wildfly BOM -->
-        <jboss-javaee-8.0.version>1.0.3.Final</jboss-javaee-8.0.version>
-
-        <!-- latest Wildfly 17 dependencies -->
-        <wildfly.bom.version>17.0.0.Final</wildfly.bom.version>
+        <!-- latest Wildfly 18 dependencies -->
+        <wildfly.bom.version>18.0.0.Final</wildfly.bom.version>
 
         <!-- Java EE modules that were removed from Java SE after Java 8 -->
         <!-- (see http://openjdk.java.net/jeps/320) -->
         <javax.xml.bind.groupId>org.jboss.spec.javax.xml.bind</javax.xml.bind.groupId>
         <javax.xml.bind.artifactId>jboss-jaxb-api_2.3_spec</javax.xml.bind.artifactId>
-        <javax.xml.bind.version>1.0.1.Final</javax.xml.bind.version>
+        <javax.xml.bind.version>2.0.0.Final</javax.xml.bind.version>
         <javax.xml.ws.groupId>org.jboss.spec.javax.xml.ws</javax.xml.ws.groupId>
         <javax.xml.ws.artifactId>jboss-jaxws-api_2.3_spec</javax.xml.ws.artifactId>
-        <javax.xml.ws.version>1.0.0.Final</javax.xml.ws.version>
+        <javax.xml.ws.version>2.0.0.Final</javax.xml.ws.version>
         <javax.xml.soap.groupId>org.jboss.spec.javax.xml.soap</javax.xml.soap.groupId>
-        <javax.xml.soap.artifactId>jboss-saaj-api_1.3_spec</javax.xml.soap.artifactId>
-        <javax.xml.soap.version>1.0.6.Final</javax.xml.soap.version>
+        <javax.xml.soap.artifactId>jboss-saaj-api_1.4_spec</javax.xml.soap.artifactId>
+        <javax.xml.soap.version>1.0.0.Final</javax.xml.soap.version>
         <javax.annotation.groupId>org.jboss.spec.javax.annotation</javax.annotation.groupId>
         <javax.annotation.artifactId>jboss-annotations-api_1.3_spec</javax.annotation.artifactId>
-        <javax.annotation.version>1.0.1.Final</javax.annotation.version>
+        <javax.annotation.version>2.0.1.Final</javax.annotation.version>
         <javax.transaction.groupId>org.jboss.spec.javax.transaction</javax.transaction.groupId>
-        <javax.transaction.artifactId>jboss-transaction-api_1.2_spec</javax.transaction.artifactId>
-        <javax.transaction.version>1.1.1.Final</javax.transaction.version>
+        <javax.transaction.artifactId>jboss-transaction-api_1.3_spec</javax.transaction.artifactId>
+        <javax.transaction.version>2.0.0.Final</javax.transaction.version>
 
-        <!-- MicroProfile Standard Versions provided by Wildfly 17 -->
+        <!-- jboss-jaxws-api_2.3_spec-2.0.0.Final requires the non-existing jakarta.jws-api-2.1.0, -->
+        <!-- force existing version via dependency management -->
+        <jakarta.jws.version>1.1.1</jakarta.jws.version>
+
+        <!-- MicroProfile Standard Versions provided by Wildfly 18 -->
         <mp.config.version>1.3</mp.config.version>
-        <mp.health.version>1.0</mp.health.version>
-        <mp.metrics.version>1.1</mp.metrics.version>
-        <mp.opentracing.version>1.1</mp.opentracing.version>
-        <mp.rest-client.version>1.0.1</mp.rest-client.version>
-        <smallrye.config.version>1.3.4</smallrye.config.version>
-        <smallrye.health.version>1.0.2</smallrye.health.version>
-        <smallrye.metrics.version>1.1.3</smallrye.metrics.version>
-        <smallrye.opentracing.version>1.1.1</smallrye.opentracing.version>
-        <!-- wildfly 17 is using resteasy-client-microprofile instead of smallrye-rest-client -->
+        <mp.health.version>2.0.1</mp.health.version>
+        <mp.metrics.version>2.0.2</mp.metrics.version>
+        <mp.opentracing.version>1.3.1</mp.opentracing.version>
+        <mp.rest-client.version>1.3.2</mp.rest-client.version>
+        <smallrye.config.version>1.3.6</smallrye.config.version>
+        <smallrye.health.version>2.0.0</smallrye.health.version>
+        <smallrye.metrics.version>2.1.5</smallrye.metrics.version>
+        <smallrye.opentracing.version>1.3.0</smallrye.opentracing.version>
+        <!-- wildfly 18 is using resteasy-client-microprofile instead of smallrye-rest-client -->
 
-        <!--add opentracing-->
-
-        <!-- Artifact versions provided by Wildfly 17.0.0.Final -->
-        <!-- (see wildfly-17.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
-        <resteasy.version>3.7.0.Final</resteasy.version>
-        <!-- note that wildfly bundles the javax packages, but yasson depends on the jakarta.json ones -->
-        <jakarta.json.version>1.1.5</jakarta.json.version>
-        <javax.json.version>1.1.2</javax.json.version>
-        <glassfish.javax.json.version>1.1.2</glassfish.javax.json.version>
-        <jakarta.json.bind.version>1.0.1</jakarta.json.bind.version>
-        <javax.json.bind.version>1.0</javax.json.bind.version>
-        <yasson.version>1.0.3</yasson.version>
+        <!-- Artifact versions provided by Wildfly 18.0.0.Final -->
+        <!-- (see wildfly-18.0.0.Final/modules/system/layers/base and Wildfly BOM) -->
+        <resteasy.version>3.9.0.Final</resteasy.version>
+        <!-- note that wildfly provides jakarta.json* in the path modules/system/layers/base/javax/json/* -->
+        <jakarta.json.version>1.1.6</jakarta.json.version>
+        <glassfish.jakarta.json.version>1.1.6</glassfish.jakarta.json.version>
+        <jakarta.json.bind.version>1.0.2</jakarta.json.bind.version>
+        <yasson.version>1.0.5</yasson.version>
         <!-- note that for new projects you should consider using JSON-B (yasson) instead of Jackson -->
-        <jackson-2-version>2.9.9</jackson-2-version>
-        <infinispan.version>9.4.14.Final</infinispan.version>
+        <jackson-2-version>2.9.10</jackson-2-version>
+        <infinispan.version>9.4.16.Final</infinispan.version>
         <woodstox.version>5.0.3</woodstox.version>
-        <hibernate.version>5.3.10.Final</hibernate.version>
+        <hibernate.version>5.3.12.Final</hibernate.version>
 
         <!-- Hibernate 6.0.1.Final is the reference implementation for Bean Validation 2.0 (EE8) -->
-        <!-- Wildfly 17.0.0.Final uses Hibernate Validator 6.0.16.Final -->
-        <javax.validation.version>2.0.1.Final</javax.validation.version>
-        <hibernate.validator.version>6.0.16.Final</hibernate.validator.version>
+        <!-- Wildfly 18.0.0.Final uses Hibernate Validator 6.0.17.Final -->
+        <jakarta.validation.version>2.0.2</jakarta.validation.version>
+        <hibernate.validator.version>6.0.17.Final</hibernate.validator.version>
 
-        <!-- Wildfly 17.0.0.Final uses Weld 3.1.1 (corresponding to CDI 2.0) -->
-        <javax.inject.version>1</javax.inject.version>
-        <weld.version>3.1.1.Final</weld.version>
+        <!-- Wildfly 18.0.0.Final uses Weld 3.1.1 (corresponding to CDI 2.0) -->
+        <jakarta.inject.version>1.0</jakarta.inject.version>
+        <weld.version>3.1.2.Final</weld.version>
 
         <!-- Latest Wildfly plugin -->
         <wildfly.maven.plugin.version>${wildfly.plugin.version}</wildfly.maven.plugin.version>
@@ -85,27 +79,10 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- JavaEE version -->
-            <dependency>
-                <groupId>javax</groupId>
-                <artifactId>javaee-api</artifactId>
-                <version>${javax.javaee-api.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <!-- JBoss specific JavaEE artifacts  -->
-            <dependency>
-                <groupId>org.jboss.spec</groupId>
-                <artifactId>jboss-javaee-8.0</artifactId>
-                <version>${jboss-javaee-8.0.version}</version>
-                <scope>provided</scope>
-                <type>pom</type>
-            </dependency>
-
             <!-- Wildfly BOM -->
             <dependency>
                 <groupId>org.wildfly.bom</groupId>
-                <artifactId>wildfly-javaee8</artifactId>
+                <artifactId>wildfly-jakartaee8</artifactId>
                 <version>${wildfly.bom.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
@@ -119,6 +96,12 @@
                 <scope>provided</scope>
             </dependency>
 
+            <!-- needed for jboss-jaxws-api_2.3_spec-2.0.0.Final -->
+            <dependency>
+                <groupId>jakarta.jws</groupId>
+                <artifactId>jakarta.jws-api</artifactId>
+                <version>${jakarta.jws.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -139,6 +122,14 @@
                     <groupId>org.eclipse.microprofile.health</groupId>
                     <artifactId>microprofile-health-api</artifactId>
                     <version>${mp.health.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- Dependency convergence error (wildfly-18 -->
+                            <!-- avoid already excluded dependency) -->
+                            <groupId>javax.inject</groupId>
+                            <artifactId>javax.inject</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.eclipse.microprofile.metrics</groupId>
@@ -154,6 +145,14 @@
                     <groupId>org.eclipse.microprofile.rest.client</groupId>
                     <artifactId>microprofile-rest-client-api</artifactId>
                     <version>${mp.rest-client.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- Dependency convergence error (wildfly-18 -->
+                            <!-- avoid already excluded dependency) -->
+                            <groupId>javax.inject</groupId>
+                            <artifactId>javax.inject</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>io.smallrye</groupId>
@@ -161,10 +160,10 @@
                     <version>${smallrye.config.version}</version>
                     <exclusions>
                         <exclusion>
-                            <!-- avoid Dependency convergence error (wildfly-17 -->
-                            <!-- has javax.annotation-api:1.3.2, smallrye-config only 1.2) -->
-                            <groupId>javax.annotation</groupId>
-                            <artifactId>javax.annotation-api</artifactId>
+                            <!-- Dependency convergence error (wildfly-18 -->
+                            <!-- avoid already excluded dependency) -->
+                            <groupId>javax.inject</groupId>
+                            <artifactId>javax.inject</artifactId>
                         </exclusion>
                     </exclusions>
                 </dependency>
@@ -182,6 +181,20 @@
                     <groupId>io.smallrye</groupId>
                     <artifactId>smallrye-opentracing</artifactId>
                     <version>${smallrye.opentracing.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (wildfly-18 -->
+                            <!-- has microprofile-opentracing-api:1.3.1, smallrye-opentracing only 1.3) -->
+                            <groupId>org.eclipse.microprofile.opentracing</groupId>
+                            <artifactId>microprofile-opentracing-api</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (wildfly-18 -->
+                            <!-- has microprofile-rest-client-api:1.3.2, smallrye-opentracing only 1.2.0) -->
+                            <groupId>org.eclipse.microprofile.rest.client</groupId>
+                            <artifactId>microprofile-rest-client-api</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>org.jboss.resteasy</groupId>
@@ -194,19 +207,9 @@
                     <version>${jakarta.json.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>javax.json</groupId>
-                    <artifactId>javax.json-api</artifactId>
-                    <version>${javax.json.version}</version>
-                </dependency>
-                <dependency>
                     <groupId>org.glassfish</groupId>
-                    <artifactId>javax.json</artifactId>
-                    <version>${glassfish.javax.json.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>javax.json.bind</groupId>
-                    <artifactId>javax.json.bind-api</artifactId>
-                    <version>${javax.json.bind.version}</version>
+                    <artifactId>jakarta.json</artifactId>
+                    <version>${glassfish.jakarta.json.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>jakarta.json.bind</groupId>
@@ -217,6 +220,14 @@
                     <groupId>org.eclipse</groupId>
                     <artifactId>yasson</artifactId>
                     <version>${yasson.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <!-- avoid Dependency convergence error (wildfly-18 -->
+                            <!-- has org.glassfish:jakarta.json:1.1.6, yasson only 1.1.5) -->
+                            <groupId>org.glassfish</groupId>
+                            <artifactId>jakarta.json</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
                 <dependency>
                     <groupId>com.fasterxml.jackson.core</groupId>
@@ -239,7 +250,7 @@
                     <version>${infinispan.version}</version>
                 </dependency>
                 <dependency>
-                    <!-- even though woodstox-core is in wildfly-17.0.0.Final/modules/system/layers/base/org/codehaus/woodstox, -->
+                    <!-- even though woodstox-core is in wildfly-18.0.0.Final/modules/system/layers/base/org/codehaus/woodstox, -->
                     <!-- the group id is com.fasterxml.woodstox -->
                     <groupId>com.fasterxml.woodstox</groupId>
                     <artifactId>woodstox-core</artifactId>
@@ -266,19 +277,19 @@
                     <version>${weld.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>javax.activation</groupId>
-                    <artifactId>activation</artifactId>
-                    <version>${javax.activation.version}</version>
+                    <groupId>com.sun.activation</groupId>
+                    <artifactId>jakarta.activation</artifactId>
+                    <version>${jakarta.activation.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>javax.inject</groupId>
-                    <artifactId>javax.inject</artifactId>
-                    <version>${javax.inject.version}</version>
+                    <groupId>jakarta.inject</groupId>
+                    <artifactId>jakarta.inject-api</artifactId>
+                    <version>${jakarta.inject.version}</version>
                 </dependency>
                 <dependency>
-                    <groupId>javax.validation</groupId>
-                    <artifactId>validation-api</artifactId>
-                    <version>${javax.validation.version}</version>
+                    <groupId>jakarta.validation</groupId>
+                    <artifactId>jakarta.validation-api</artifactId>
+                    <version>${jakarta.validation.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>${javax.xml.bind.groupId}</groupId>
